--- a/src/help.html
+++ b/src/help.html
@@ -4,290 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Analyzer - User Guide</title>
-    <style>
-        /* Styles adapted from Genesis V.2, with size adjustments */
-        :root {
-            --primary-color: #1a2940;
-            --secondary-color: #3498db;
-            --accent-color: #e74c3c;
-            --text-color: #bdc3c7; /* Base text color */
-            --heading-color: #ecf0f1; /* Brighter for headings */
-            --h3-color: #1abc9c; /* Turquoise for H3 */
-            --h4-color: #a9d7f3; /* Lighter blue for H4 */
-            --container-width: 1000px;
-        }
+	<link rel="stylesheet" href="styles.css">
 
-        body {
-            /* Increased base font size */
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 17px; /* Increased from default/previous */
-            line-height: 1.7; /* Adjusted line height */
-            color: var(--text-color);
-            margin: 0;
-            padding: 0;
-            background-color: #0a1525;
-            background-image: linear-gradient(to bottom, #0a1525 0%, #1a2940 50%, #0a1525 100%);
-            background-attachment: fixed;
-        }
-
-        .cover-page {
-            min-height: 80vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-        }
-
-        .cover-page h1 {
-             font-family: 'Segoe UI Light', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-             font-size: 4.5rem; /* Increased size */
-             font-weight: 300;
-             /* LOGO COLOR WHITE */
-             color: #ffffff;
-             text-shadow: 0 0 15px rgba(52, 152, 219, 0.9); /* Keep the blue glow */
-             margin-bottom: 5px;
-        }
-        .cover-page h2 {
-            font-family: 'Segoe UI Light', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            font-size: 2.2rem; /* Increased size */
-            font-weight: 300;
-            color: var(--heading-color);
-            margin-top: 0;
-            margin-bottom: 40px;
-        }
-         .cover-page p {
-             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-             color: #bdc3c7;
-         }
-        .cover-page .author {
-            font-size: 1.2rem; /* Increased size */
-            color: #bdc3c7;
-            margin-top: 30px;
-        }
-         .cover-page .copyright {
-             font-size: 1rem; /* Increased size */
-             color: #7f8c8d;
-             margin-top: 5px;
-         }
-
-        .container {
-            max-width: var(--container-width);
-            margin: 20px auto;
-            padding: 35px; /* Increased padding */
-            background-color: rgba(10, 21, 37, 0.92);
-            box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
-            border-radius: 8px;
-            border: 1px solid rgba(52, 152, 219, 0.1);
-        }
-
-        /* Table of Contents specific style */
-        #toc-section {
-            background-color: rgba(255, 255, 255, 0.03);
-            padding: 25px; /* Increased padding */
-            border-radius: 5px;
-            margin-bottom: 35px; /* Increased margin */
-        }
-         #toc-section h2 {
-            color: var(--heading-color); /* Brighter ToC title */
-            font-size: 2rem; /* Increased size */
-            border-bottom: 1px solid rgba(52, 152, 219, 0.5); /* Match H2 style */
-            padding-bottom: 10px;
-            margin-top: 0;
-            font-weight: 300; /* Light weight */
-            font-family: 'Segoe UI Light', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-         }
-         #toc-section ul {
-            list-style: none;
-            padding-left: 0;
-            margin-top: 15px;
-        }
-         #toc-section li {
-            margin-bottom: 10px; /* Increased spacing */
-        }
-         #toc-section a {
-            color: #a9d7f3;
-            text-decoration: none;
-            transition: color 0.2s ease;
-            font-size: 1.05em; /* Slightly larger ToC links */
-        }
-         #toc-section a:hover {
-            color: #ffffff;
-            text-decoration: underline;
-        }
-
-
-        h1, h2, h3, h4 {
-            margin-top: 2em; /* Increased top margin */
-            margin-bottom: 1em;
-            font-weight: 300; /* Light headings */
-            font-family: 'Segoe UI Light', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        /* Specific heading styles */
-        h1 { font-size: 2.8rem; text-align: center; margin-bottom: 1.2em; color: #FFF; text-shadow: 0 0 8px rgba(52, 152, 219, 0.5);} /* Applied only outside cover */
-        h2 { font-size: 2rem; border-bottom: 1px solid rgba(52, 152, 219, 0.5); padding-bottom: 10px; color: var(--heading-color); } /* Increased size */
-        h3 { font-size: 1.6rem; color: var(--h3-color); } /* Increased size */
-        h4 { font-size: 1.3rem; color: var(--h4-color); } /* Increased size */
-
-        p {
-            margin-bottom: 1.3em; /* Increased paragraph spacing */
-            color: var(--text-color);
-            text-align: justify; /* JUSTIFY TEXT */
-        }
-
-        ul, ol {
-            margin-bottom: 25px; /* Increased spacing */
-            padding-left: 35px; /* Increased indentation */
-        }
-
-        li {
-            margin-bottom: 12px; /* Increased list item spacing */
-        }
-
-        strong, b {
-             font-weight: 600;
-             color: #ffffff;
-        }
-        em, i {
-             font-style: italic;
-             color: #a9d7f3; /* Keep lighter blue for italics */
-        }
-        code, .inline-code { /* Added class for consistency */
-             background-color: rgba(255, 255, 255, 0.1);
-             padding: 3px 6px; /* Slightly larger padding */
-             border-radius: 3px;
-             font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-             color: #fab1a0;
-             font-size: 0.95em; /* Slightly larger code font */
-        }
-
-        a {
-            color: var(--secondary-color);
-            text-decoration: none;
-            transition: color 0.2s ease;
-        }
-        a:hover {
-            color: #ffffff;
-            text-decoration: underline;
-        }
-
-        hr {
-            border: none;
-            border-top: 1px solid rgba(52, 152, 219, 0.3);
-            margin: 40px 0; /* Increased margin */
-        }
-
-        /* Info boxes */
-        .info-box {
-            background-color: rgba(52, 152, 219, 0.1);
-            border-left: 4px solid var(--secondary-color);
-            padding: 18px; /* Increased padding */
-            margin: 25px 0; /* Increased margin */
-            border-radius: 4px;
-        }
-        .info-box p:last-child {
-            margin-bottom: 0;
-        }
-
-        .warning-box {
-            background-color: rgba(231, 76, 60, 0.1);
-            border-left: 4px solid var(--accent-color);
-            padding: 18px; /* Increased padding */
-            margin: 25px 0; /* Increased margin */
-            border-radius: 4px;
-        }
-        .warning-box p:last-child {
-            margin-bottom: 0;
-        }
-
-        .success-box {
-            background-color: rgba(26, 188, 156, 0.1);
-            border-left: 4px solid var(--h3-color);
-            padding: 18px;
-            margin: 25px 0;
-            border-radius: 4px;
-        }
-        .success-box p:last-child {
-            margin-bottom: 0;
-        }
-
-        /* Tables */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 25px 0; /* Increased margin */
-            background-color: rgba(255, 255, 255, 0.02);
-        }
-        table th {
-            background-color: rgba(52, 152, 219, 0.2);
-            color: #ffffff;
-            padding: 14px; /* Increased padding */
-            text-align: left;
-            font-weight: 600;
-            border-bottom: 2px solid rgba(52, 152, 219, 0.5);
-        }
-        table td {
-            padding: 12px 14px; /* Increased padding */
-            border-bottom: 1px solid rgba(52, 152, 219, 0.1);
-        }
-        table tr:hover {
-            background-color: rgba(52, 152, 219, 0.05);
-        }
-
-        /* Footer */
-        footer {
-            text-align: center;
-            padding: 35px 0; /* Increased padding */
-            color: #7f8c8d;
-            font-size: 0.95em;
-        }
-        footer a {
-            color: #a9d7f3;
-        }
-        footer p {
-            margin: 8px 0;
-            text-align: center; /* Override justify for footer */
-        }
-
-        /* Section styling */
-        section {
-            margin-bottom: 45px; /* Increased margin */
-        }
-
-        .param-section {
-            margin-left: 25px; /* Increased indentation */
-            margin-bottom: 30px; /* Increased spacing */
-        }
-
-        /* Disclaimer box */
-        .disclaimer-box {
-            background-color: rgba(231, 76, 60, 0.05);
-            border: 1px solid rgba(231, 76, 60, 0.3);
-            padding: 25px; /* Increased padding */
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-        .disclaimer-box p {
-            margin-bottom: 15px; /* Increased spacing */
-        }
-        .disclaimer-box p:last-child {
-            margin-bottom: 0;
-        }
-
-        /* Score indicators */
-        .score-indicator {
-            display: inline-block;
-            padding: 3px 8px;
-            border-radius: 3px;
-            font-weight: 600;
-            font-size: 0.9em;
-        }
-        .score-low { background-color: rgba(0, 200, 81, 0.2); color: #00C851; }
-        .score-medium { background-color: rgba(255, 187, 51, 0.2); color: #ffbb33; }
-        .score-high { background-color: rgba(255, 68, 68, 0.2); color: #ff4444; }
-    </style>
 </head>
 <body>
 
