--- a/src/index.html
+++ b/src/index.html
@@ -30,12 +30,12 @@
         <!-- Primary Action Buttons -->
         <div class="button-container">
             <input type="file" id="imageInput" accept="image/*" multiple style="display: none">
-            <button onclick="document.getElementById('imageInput').click()">📁 Load Image</button>
-            <button id="exportJSON">💾 Export JSON</button>
-            <button id="exportCSV">📊 Export CSV</button>
-            <button id="exportExifText">📄 Export TXT</button>
-            <button id="openTrainingMode">🎓 Training Mode</button>
-            <button id="helpButton" onclick="window.open('help.html', '_blank')">❓ Help</button>
+            <button onclick="document.getElementById('imageInput').click()">Load Image</button>
+            <button id="exportJSON">Export JSON</button>
+            <button id="exportCSV">Export CSV</button>
+            <button id="exportExifText">Export TXT</button>
+            <button id="openTrainingMode">Training Mode</button>
+            <button id="helpButton" onclick="window.open('help.html', '_blank')">Help</button>
         </div>
 
         <!-- Analysis Tools (shown after image load) -->
@@ -127,7 +127,7 @@
         <div class="footer-links">
             <a href="https://www.bsm3d.com" target="_blank">www.bsm3d.com</a>
             <a href="https://bsm3d.com/analyse/" target="_blank">Demo</a>
-            <a href="https://github.com/bsm3d" target="_blank">GitHub</a>
+            <a href="https://github.com/bsm3d/Image-analyser" target="_blank">Source Code</a>
             <a href="help.html" target="_blank">Documentation</a>
         </div>
         <p style="margin-top: 15px; font-size: 0.85em; color: #5f6c7d;">
