--- a/src/help.html
+++ b/src/help.html
@@ -915,10 +915,13 @@
         <footer>
             <hr>
             <p>Image Analyzer - AI Detection & Analysis Tool</p>
-            <p>Design, Code, and Documentation by Benoît (BSM3D) Saint-Moulin © 2025</p>
-            <p>Website: <a href="https://www.bsm3d.com" target="_blank">www.bsm3d.com</a></p>
-            <p>Demo: <a href="https://bsm3d.com/analyse/" target="_blank">https://bsm3d.com/analyse/</a></p>
-            <p>GitHub: <a href="https://github.com/bsm3d" target="_blank">@bsm3d</a></p>
+			<p>Design, Code, and Documentation by Benoît (BSM3D) Saint-Moulin © 2025</p>
+			<div class="footer-links">
+				<a href="https://www.bsm3d.com" target="_blank">www.bsm3d.com</a>
+				<a href="https://bsm3d.com/analyse/" target="_blank">Demo</a>
+				<a href="https://github.com/bsm3d/Image-analyser" target="_blank">Source Code</a>
+				<a href="help.html" target="_blank">Documentation</a>
+			</div>
             <p style="margin-top: 15px; font-size: 0.9em; color: #7f8c8d;">
                 Privacy-first design. Client-side processing. Open source for transparency.<br>Special thanks to the open source community and all contributors who make tools like this possible.
             </p>
